--- a/notebooks/explore_data.ipynb
+++ b/notebooks/explore_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "319cb51f",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3719d89c",
    "metadata": {},
    "outputs": [],
@@ -39,22 +39,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8e836854",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "581\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def convert_all_img():\n",
     "    # List all NIfTI files in the folder\n",
-    "    folder_path = '~/Downloads/IXI-T1'\n",
+    "    folder_path = '../data/raw/IXI-T1'\n",
     "    nii_files = [f for f in os.listdir(os.path.expanduser(folder_path)) if f.endswith('.nii.gz')]\n",
     "    print(len(nii_files))\n",
     "\n",
@@ -68,14 +60,14 @@
     "        slice_data = data[:, :, slice_idx] # Load your slice\n",
     "        slice_data = np.rot90(slice_data) # Rotate 90 degrees counter-clockwise\n",
     "\n",
-    "        image_fname = '../data/'+file\n",
+    "        image_fname = '../data/processed/IXI_T1_png/'+file\n",
     "        image_fname = image_fname.replace(\".nii.gz\", \".png\")\n",
     "        plt.imsave(image_fname, slice_data, cmap='gray') #saves images to data directory"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "03a21ab2",
    "metadata": {},
    "outputs": [],
@@ -83,23 +75,50 @@
     "def convert_excel_to_csv(filename):\n",
     "    excel_file = filename\n",
     "    df = pd.read_excel(excel_file)\n",
-    "    #print(df.head())\n",
+    "    print(df.head())\n",
     "    df.to_csv('../IXI.csv', index=False) # Save as .csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "id": "0800c453",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   IXI_ID  SEX_ID (1=m, 2=f)  HEIGHT  WEIGHT  ETHNIC_ID  MARITAL_ID  \\\n",
+      "0       1                  1     170      80          2           3   \n",
+      "1       2                  2     164      58          1           4   \n",
+      "2      12                  1     175      70          1           2   \n",
+      "3      13                  1     182      70          1           2   \n",
+      "4      14                  2     163      65          1           4   \n",
+      "\n",
+      "   OCCUPATION_ID  QUALIFICATION_ID         DOB  DATE_AVAILABLE STUDY_DATE  \\\n",
+      "0              5                 2  1968-02-22               0        NaT   \n",
+      "1              1                 5  1970-01-30               1 2005-11-18   \n",
+      "2              1                 5  1966-08-20               1 2005-06-01   \n",
+      "3              1                 5  1958-09-15               1 2005-06-01   \n",
+      "4              1                 5  1971-03-15               1 2005-06-09   \n",
+      "\n",
+      "         AGE  \n",
+      "0        NaN  \n",
+      "1  35.800137  \n",
+      "2  38.781656  \n",
+      "3  46.710472  \n",
+      "4  34.236824  \n"
+     ]
+    }
+   ],
    "source": [
     "convert_excel_to_csv(\"../IXI.xls\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "bd26bdd6",
    "metadata": {},
    "outputs": [],
@@ -110,7 +129,7 @@
     "    print(\"# of subjects\", len(df))\n",
     "\n",
     "    # 2. Get list of all image files in the data directory\n",
-    "    image_dir = '../data/'\n",
+    "    image_dir = '../data/processed/IXI_T1_png'\n",
     "    # Ensure we only pick up the images we created\n",
     "    image_files = [f for f in os.listdir(image_dir) if f.endswith('.png')]\n",
     "\n",
@@ -143,7 +162,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
+   "id": "4c34890c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "581\n"
+     ]
+    }
+   ],
+   "source": [
+    "convert_all_img()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "06b91f69",
    "metadata": {},
    "outputs": [
@@ -299,7 +336,7 @@
        "4  34.236824    IXI014-HH-1236-T1.png  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +349,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "aipi540",
    "language": "python",
    "name": "python3"
   },
@@ -326,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
